Distorted img fixed

--- a/exercise-4/styles.css
+++ b/exercise-4/styles.css
@@ -3,7 +3,7 @@
     width: 300px;
 }
 
-.avatar.disproportioned {
+.avatar.distorted {
     height:400px;
     width: 200px;
 }
